Fix wrong font-size

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -206,7 +206,7 @@
     line-height: 1.2;
 
     @include media-query($on-laptop) {
-        font-size: 36px;
+        font-size: 30px;
     }
 }
 
